--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.4"
+    "react-native": "0.74.4",
+    "react-native-gesture-handler": "^2.18.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.33.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,7 +34,11 @@
     "@react-native/eslint-config": "0.74.86",
     "@react-native/metro-config": "0.74.86",
     "@react-native/typescript-config": "0.74.86",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-redux": "^7.1.33",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
@@ -33,5 +50,8 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "resolutions": {
+    "react-native-reanimated": "^3.14.0"
+  }
 }
