--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,19 @@
 {
+  "compilerOptions": {
+      "target": "esnext",
+      "module": "esnext", // Change this to 'esnext' or another supported option
+      "jsx": "react-native",
+      "strict": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
+  },
+  "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx"
+  ],
+  "exclude": [
+      "node_modules"
+  ],
   "extends": "@react-native/typescript-config/tsconfig.json"
 }
